--- a/tex/17.tex
+++ b/tex/17.tex
@@ -2566,6 +2566,6 @@ goal Automation of Mathematical Modeling.
 This work has been supported by the Norwegian Research Council (grant
 162730) and Simula Research Laboratory.  I wish to thank everyone who
 has helped improving \ufl{} with suggestions and testing, in particular
-Anders Logg, Kristian \O{}lgaard, Garth Wells, and Harish Narayanan. In
-addition to the two anonymous referees, both Kent-Andr\'e Mardal and Marie
+Anders Logg, Kristian \O{}lgaard, Garth Wells, Harish Narayanan and Marie Rognes.
+In addition to the two anonymous referees, both Kent-Andr\'e Mardal and Marie
 Rognes performed critical reviews which greatly improved this chapter.
