Fix Certek accent again in the new bibfile.

--- a/tex/BM1.tex
+++ b/tex/BM1.tex
@@ -1422,9 +1422,9 @@ J.~R. Cebral, M.~A. Castro, J.~E. Burgess, R.~S. Pergolizzi, M.~J. Sheridan,
   2550--2559, 2005.
 \newblock URL \url{http://www.ajnr.org/cgi/content/abstract/26/10/2550}.
 
-\bibitem[Certik et~al.(2009)Certik, Seoane, Peterson,
+\bibitem[\v{C}ert\'{i}k et~al.(2009)\v{C}ert\'{i}k, Seoane, Peterson,
   et~al.]{CertikSeoanePetersonEtAl2009}
-O.~Certik, F.~Seoane, P.~Peterson, et~al.
+O.~\v{C}ert\'{i}k, F.~Seoane, P.~Peterson, et~al.
 \newblock {sympy}: {Python} library for symbolic mathematics, 2009.
 \newblock URL \url{http://sympy.org}.
 
@@ -3474,8 +3474,8 @@ J.~M. Siskind and B.~A. Pearlmutter.
   361--376, 2008.
 \newblock URL \url{http://dx.doi.org/10.1007/s10990-008-9037-1}.
 
-\bibitem[Skavhaug and Certik(2009)]{SkavhaugCertik2009}
-O.~Skavhaug and O.~Certik.
+\bibitem[Skavhaug and \v{C}ert\'{i}k(2009)]{SkavhaugCertik2009}
+O.~Skavhaug and O.~\v{C}ert\'{i}k.
 \newblock Swiginac {P}ython interface to {GiNaC}, 2009.
 \newblock URL \url{http://swiginac.berlios.de/}.
 
