--- a/tex/15.tex
+++ b/tex/15.tex
@@ -284,8 +284,8 @@ L = -f*v*dx + g*v*ds
 sfc -w1  -ogenerated_code Poisson.ufl
 \end{bash}
 Here, \emp{-w1} means that \dolfin{} wrappers are generated, while
-\emp{-ogenerate\_code} means that the generated code should be
-located in the directory \emp{generate\_code}. Notice that the flags
+\emp{-ogenerated\_code} means that the generated code should be
+located in the directory \emp{generated\_code}. Notice that the flags
 and corresponding options are not separated by spaces. A complete
 list of options is obtained with \emp{sfc -h}.  The generated code can be
 utilized in DOLFIN in a standard fashion.  For a complete example consider
