Change ufl.Graph -> ufl.algorithms.Graph.

--- a/tex/15.tex
+++ b/tex/15.tex
@@ -499,7 +499,7 @@ The representation classes are quite involved, in particular when
 using quadrature where the generated code involves multiple loops and
 quite a few temporary variables. To generate quadrature based code,
 the computational graph algorithms from UFL (in particular the class
-\emp{ufl.Graph}) are used to split the expression tree into smaller
+\emp{ufl.algorithms.Graph}) are used to split the expression tree into smaller
 subexpressions.  \sfc{} makes GiNaC symbols that represent temporary
 variables for all subexpressions.  To place the temporary variables
 inside the correct loops in the generated code, the computational
