--- a/tex/BM1.tex
+++ b/tex/BM1.tex
@@ -2700,6 +2700,11 @@ A.~Logg.
   339--354, 2004.
 \newblock URL \url{http://dx.doi.org/10.1016/j.apnum.2003.11.004}.
 
+\bibitem[Logg(2007)]{Logg2007a}
+A.~Logg.
+\newblock Automating the Finite Element Method.
+\newblock \emph{Arch. Comput. Methods Eng.}, 2\penalty0 (14):\penalty0 93--138, 2007.
+
 \bibitem[Logg(2009)]{Logg2009}
 A.~Logg.
 \newblock Efficient representation of computational meshes.
