Wrap comment lines manually since the auto-wrapping doesn't add ///.
And a minor '"' fix to avoid \".

--- a/tex/16.tex
+++ b/tex/16.tex
@@ -257,13 +257,15 @@ public:
   /// Geometric dimension of the mesh
   unsigned int geometric_dimension;
 
-  /// Array of global indices for the mesh entities of the cell
+  /// Array of global indices for the mesh entities of
+  /// the cell
   unsigned int** entity_indices;
 
   /// Array of coordinates for the vertices of the cell
   double** coordinates;
 
-  /// Cell index (short-cut for entity_indices[topological_dimension][0])
+  /// Cell index (short-cut for
+  /// entity_indices[topological_dimension][0])
   unsigned int index;
 
   /// Local facet index
@@ -359,7 +361,7 @@ implementation["constructor_arguments"] = ""
 implementation["initializer_list"] = ""
 implementation["constructor"] = "// Do nothing"
 implementation["destructor"] = "// Do nothing"
-implementation["signature"] = "return \"my form\""
+implementation["signature"] = 'return "my form"'
 implementation["rank"] = "return 2;"
 implementation["num_coefficients"] = "return 0;"
 implementation["num_cell_domains"] = "return 3;"
