Remove unnecessary "" around UFL cells in chapter 30.

--- a/tex/30.tex
+++ b/tex/30.tex
@@ -269,7 +269,7 @@ do this by adding continuous and discontinuous function spaces to create
 an ``enriched'' space:
 %
 \begin{python}
-Ec = FiniteElement("Lagrange", "tetrahedron", 2)
+Ec = FiniteElement("Lagrange", tetrahedron, 2)
 Ed = RestrictedElement(Ec, dc)
 E  = Ec + Ed
 \end{python}
@@ -683,8 +683,8 @@ multiplication sign).
 \bwfig
 \begin{python}
 # Define continuous (cell-wise) spaces
-BDM_c = FiniteElement("Brezzi-Douglas-Marini", "triangle", 1)
-DG_c  = FiniteElement("Discontinuous Lagrange", "triangle", 0)
+BDM_c = FiniteElement("Brezzi-Douglas-Marini", triangle, 1)
+DG_c  = FiniteElement("Discontinuous Lagrange", triangle, 0)
 
 # Define discontinuous spaces
 BDM_d, DG_d = RestrictedElement(BDM_c, dc), RestrictedElement(DG_c, dc)
@@ -888,7 +888,7 @@ presented in Figure~\ref{fig:nikbakht:c++_nonlinear_poisson}.
 \bwfig
 \begin{python}
 # Define continuous and discontinuous spaces
-elem_cont    = FiniteElement("Lagrange", "triangle", 2)
+elem_cont    = FiniteElement("Lagrange", triangle, 2)
 elem_discont = RestrictedElement(elem_cont, dc)
 element      = elem_cont + elem_discont
 
