Apply author changes to Chapter 5 [kirby-5]

--- a/tex/5.tex
+++ b/tex/5.tex
@@ -14,7 +14,7 @@ variational forms used throughout FEniCS.
 \section{Background}
 
 In Chapter~\ref{chap:kirby-7}, we introduced the following canonical
-variational problem: Find $u \in V$ such that
+variational problem: find $u \in V$ such that
 \begin{equation} \label{eq:kirby-5:canonical}
   a(u, v) = L(v) \quad \foralls v \in \hat{V},
 \end{equation}
@@ -26,7 +26,7 @@ The bilinear form
 maps a pair of trial and test functions to a real number and is linear
 in both arguments. Similarly, the linear form $L: \hat{V} \rightarrow
 \R$ maps a given test function to a real number. We also considered
-the discretization of nonlinear variational problems: Find $u \in V$
+the discretization of nonlinear variational problems: find $u \in V$
 such that
 \begin{equation}
   F(u; v) = 0 \quad \foralls v \in \hat{V}.
@@ -55,7 +55,7 @@ related concepts such as the \emph{action}, \emph{derivative} and
 \section{Multilinear forms}
 
 A form is a mapping from the product of a given sequence
-$\{V_j\}_{j=1}^{\rho}$ of function spaces to a real number,
+$\{V_j\}_{j=1}^{\rho}$ of function spaces to a real number:
 \begin{equation}
   a : V_{\rho} \times \cdots \times V_2 \times V_1 \rightarrow \R.
 \end{equation}
@@ -80,7 +80,7 @@ product of a sequence of argument spaces and coefficient spaces:
   \begin{split}
     a &: W_1 \times W_2 \times \cdots \times W_n \, \times \,
          V_{\rho} \times \cdots \times V_2 \times V_1 \rightarrow \R, \\
-    a &\mapsto a(w_1, w_2, \ldots, w_n; v_{\rho}, \ldots, v_2, v_1);
+    a &\mapsto a(w_1, w_2, \ldots, w_n; v_{\rho}, \ldots, v_2, v_1).
   \end{split}
 \end{equation}
 The argument spaces $\{V_j\}_{j=1}^{\rho}$ and coefficient spaces
@@ -104,12 +104,12 @@ multilinear forms of different arity.
 Consider Poisson's equation with variable conductivity~$\kappa =
 \kappa(x)$,
 \begin{equation}
-  -\nabla \cdot (\kappa \nabla u) = f.
+  -\Div (\kappa \Grad u) = f.
 \end{equation}
 Assuming Dirichlet boundary conditions on the boundary
 $\partial\Omega$, the corresponding canonical
 variational problem is defined in terms of a pair of multilinear
-forms, $a(\kappa; u, v) = \int_{\Omega} \kappa \nabla u \cdot \nabla
+forms, $a(\kappa; u, v) = \int_{\Omega} \kappa \Grad u \cdot \Grad
 v \dx$ and $L(v) = \int_{\Omega} f v \dx$. Here, $a$ is a bilinear
 form ($\rho = 2$) and $L$ is a linear form ($\rho = 1$). Both forms
 have one coefficient ($n = 1$) and the coefficients are $\kappa$ and
@@ -129,19 +129,19 @@ The incompressible Navier--Stokes equations for the velocity~$u$ and
 pressure~$p$ of an incompressible fluid read:
 \begin{equation}
   \begin{split}
-    \rho(\dot{u} + \nabla u \, u) - \nabla \cdot \sigma(u, p) &= f, \\
-    \nabla \cdot u &= 0,
+    \rho(\dot{u} + \Grad u \cdot u) - \Div \sigma(u, p) &= f, \\
+    \Div u &= 0,
   \end{split}
 \end{equation}
 where the stress tensor~$\sigma$ is given by $\sigma(u, p) = 2 \mu
 \epsilon(u) - p I$, $\epsilon$ is the symmetric gradient; that is,
-$\epsilon(u) = \frac{1}{2}(\nabla u + (\nabla u)^{\top})$, $\rho$ is
+$\epsilon(u) = \frac{1}{2}(\Grad u + (\Grad u)^{\top})$, $\rho$ is
 the fluid density and $f$ is a body force.
 Consider here the form obtained by
-integrating the nonlinear term $\nabla u , u$ against a test
+integrating the nonlinear term $\Grad u \cdot u$ against a test
 function $v$:
 \begin{equation}
-  a(u; v) = \int_{\Omega} \nabla u \, u \cdot v \dx.
+  a(u; v) = \int_{\Omega} (\Grad u \cdot u) \cdot v \dx.
 \end{equation}
 This is a linear form ($\rho = 1$) with one coefficient ($n = 1$). We
 may linearize around a fixed velocity~$\bar{u}$ to obtain
@@ -153,13 +153,13 @@ given by
 \begin{equation}
   a'(\bar{u}; \delta u, v) \equiv a'(v; \bar{u}) \delta u =
   \int_{\Omega}
-  \nabla \delta u \cdot \bar{u} \cdot v +
-  \nabla \bar{u} \cdot \delta u \cdot v \dx.
+  (\Grad \delta u \cdot \bar{u}) \cdot v +
+  (\Grad \bar{u} \cdot \delta u) \cdot v \dx.
 \end{equation}
 This is a bilinear form ($\rho = 2$) with one coefficient ($n = 1)$.
 We may also consider the \emph{trilinear} form
 \begin{equation}
-  a(w, u, v) = \int_{\Omega} \nabla u , w \cdot v \dx.
+  a(w, u, v) = \int_{\Omega} (\Grad u \cdot w) \cdot v \dx.
 \end{equation}
 This trilinear form may be assembled into a rank three tensor and
 applied to a given vector of expansion coefficients for $w$ to obtain
@@ -247,7 +247,7 @@ linear system $AU=b$, where
 \begin{equation}
   \begin{split}
     A_{ij} &= a(\phi_j, \hat{\phi}_i), \quad i,j = 1,2,\ldots,N, \\
-    b_i &= L(\hat{\phi}_i), \quad i = 1,2,\ldots,N.
+    b_i &= L(\hat{\phi}_i), \,\,\,\,\,\,\, \quad i = 1,2,\ldots,N.
   \end{split}
 \end{equation}
 Here, $A$ and $b$ are the discrete operators corresponding to the
@@ -305,7 +305,7 @@ below in Chapter~\ref{chap:logg-3}.
   \caption{The cell tensor~$A_T$, exterior facet tensor $A_S$, and
     interior facet tensor $A_{S,0}$ on a mesh are obtained by
     discretizing the local contribution to a multilinear form on a
-    cell, exterior facet or interior facet respectively. By
+    cell, exterior facet or interior facet, respectively. By
     assembling the local contributions from all cell and facet
     tensors, one obtains the global discrete operator $A$ that
     discretizes the multilinear form.}
@@ -313,9 +313,7 @@ below in Chapter~\ref{chap:logg-3}.
 \vspace*{-12pt}
 \end{figure}
 
-If $\Omega_k \subset \Omega$, the discrete operator $A$ may be
-obtained by summing the contributions only from the cells covered by
-$\Omega_k$. One may similarly define the exterior and interior facet
+One may similarly define the exterior and interior facet
 tensors $A_S$ and $A_{S,0}$ as the contributions from a facet on the
 boundary or in the interior of the mesh. The exterior facet tensor
 $A_S$ is defined as in~(\ref{eq:kirby-5:celltensor}) by replacing the
@@ -330,15 +328,15 @@ details, we refer to~\citet{OelgaardLoggWells2008}.
 
 Consider the bilinear form
 \begin{equation}
-  a(u, v) = \int_{\Omega} \nabla u \cdot \nabla v \dx,
+  a(u, v) = \int_{\Omega} \Grad u \cdot \Grad v \dx,
 \end{equation}
 obtained from the discretization of the left-hand side of Poisson's
 equation. Here, $u$ and $v$ are a pair of trial and test functions.
 Alternatively, we may consider~$v$ to be a test function and $u$ to be
 a given solution to obtain a \emph{linear} form parametrized over the
-coefficient~$u$,
+coefficient~$u$:
 \begin{equation}
-  (\mathcal{A} a) (u; v) = \int_{\Omega} \nabla u \cdot \nabla v \dx.
+  (\mathcal{A} a) (u; v) = \int_{\Omega} \Grad u \cdot \Grad v \dx.
 \end{equation}
 We refer to the linear form $\mathcal{A}a$ as the \emph{action} of the
 bilinear form~$a$. In general, the action of a $\rho$-linear form with
@@ -389,8 +387,8 @@ to~\citet{BagheriScott2004}.
 Computing the action of a multilinear form is supported by the UFL
 form language by calling the \emp{action} function:
 \begin{python}
-  a  = inner(grad(u), grad(v))*dx
-  Aa = action(a)
+a  = inner(grad(u), grad(v))*dx
+Aa = action(a)
 \end{python}
 
 \section{The derivative of a multilinear form}
@@ -410,13 +408,13 @@ value~$\bar{u}$ to obtain
 Given an approximate solution $\bar{u}$ of the nonlinear variational
 problem~(\ref{eq:kirby-5:nonlinear}), we may then hope to improve the
 approximation by solving the following linear variational problem:
-Find $\delta u \in V$ such that
+find $\delta u \in V$ such that
 \begin{equation}
   a'(\bar{u}; \delta u, v) \equiv a'(\bar{u}; v) \delta u = -a(\bar{u}; v)
   \quad \foralls v \in \hat{V}.
 \end{equation}
 Here, $a'$ is a bilinear form with two arguments $\delta u$ and $v$,
-and one coefficient $\bar{u}$, and $-a$ is a linear form with one
+and one coefficient $\bar{u}$. Furthermore, $-a$ is a linear form with one
 argument $v$ and one coefficient $\bar{u}$.
 
 When there is more than one coefficient, we use the notation
@@ -438,15 +436,14 @@ Chapter~\ref{chap:kirby-7}.
 Computing the derivative of a multilinear form is supported by the UFL
 form language by calling the \emp{derivative} function:
 \begin{python}
-  a  = inner(grad(u)*u, v)*dx
-  Da = derivative(a, u)
+a  = inner((1 + u)*grad(u), grad(v))*dx
+Da = derivative(a, u)
 \end{python}
-
 
 \section{The adjoint of a bilinear form}
 
 The adjoint $a^*$ of a bilinear form~$a$ is the form obtained by
-interchanging the two arguments,
+interchanging the two arguments:
 \begin{equation}
   a^*(v, w) = a(w, v) \quad \foralls v \in V^1 \quad \foralls w \in V^2.
 \end{equation}
@@ -471,8 +468,8 @@ problem.
 Computing the adjoint of a multilinear form is supported by the UFL
 form language by calling the \emp{adjoint} function:
 \begin{python}
-  a = div(u)*p*dx
-  a_star = adjoint(a)
+a = div(u)*q*dx
+a_star = adjoint(a)
 \end{python}
 
 \section{A note on the order of trial and test functions}
