--- a/book.tex
+++ b/book.tex
@@ -37,14 +37,14 @@
 % Chapters
 
 % Tutorial
-%\input{tex/1}
+\input{tex/1}
 
 % Part I: Methodology
-%\input{tex/Part1}
+\input{tex/Part1}
 \input{tex/2}
-%\input{tex/3}
-%\input{tex/4}
-%\input{tex/5}
+\input{tex/3}
+\input{tex/4}
+\input{tex/5}
 %\input{tex/6}
 %\input{tex/7}
 %\input{tex/8}
