Fixed figures using ffigbox

--- a/tex/33.tex
+++ b/tex/33.tex
@@ -87,10 +87,8 @@ coupling wherein \Ca flows into the cell and triggers further \Ca
 release.
 
 \begin{figure}
-  \centering
-  \includegraphics[width=\largefig]{chapters/hake/pdf/morphology}
-  \caption[The dyadic cleft]{(A): A diagram showing the
-    relationship between the TT, the SR, and the jSR in the interior
+  \ffigbox{\caption[The dyadic cleft]{(A): A diagram showing the
+      relationship between the TT, the SR, and the jSR in the interior
     of a heart cell. The volume between the flat jSR and the TT is the
     dyadic cleft. The black structures in the cleft are Ryanodine
     receptors, which are large channel proteins. (B): The
@@ -98,8 +96,8 @@ release.
     top of the disk is the cell membrane of the SR or jSR. The bottom
     is the cell membrane of the TT, and the circumference of the disk
     is the interface to the cytosol. The elevations in the TT membrane
-    model two \Ca ion channels.}
-\label{fig:hake:morphology}
+    model two \Ca ion channels.}\label{fig:hake:morphology}}
+  {\includegraphics[width=\fullfig]{chapters/hake/pdf/morphology}}
 \end{figure}
 
 \section{Mathematical models}
@@ -256,9 +254,7 @@ distance to the center of the cytosol. In our model, we have used \Ds
 = 50 nm.
 
 \begin{figure}
-  \centering
-  \includegraphics[height=\largefig]{chapters/hake/pdf/markov_models}
-  \caption[Discrete markov models]{(A): State diagram of the
+\ffigbox{\caption[Discrete markov models]{(A): State diagram of the
     discrete LCC Markov model from \citet{JafriRiceWinslow1998}. Each
     channel can be in one of the 12 states.  The transitions between
     the states are controlled by propensities. The $\alpha$, and
@@ -273,8 +269,8 @@ distance to the center of the cytosol. In our model, we have used \Ds
     of an RyR from \citet{SternSongEtAl1999}. The $\alpha$ and
     $\gamma$ propensities are \Ca-dependent, representing the
     activation and inactivation dependency of the cytosolic \CaC. The
-    $\beta$ and $\delta$ propensities are constant.}
-  \label{fig:hake:markov-models}
+    $\beta$ and $\delta$ propensities are constant.}\label{fig:hake:markov-models}}
+{\includegraphics[height=\fullfig]{chapters/hake/pdf/markov_models}}
   \vspace*{30pt}
 \end{figure}
 
